# CommonAssessmentTool

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: ci.yml  deploy.yml
app/: database.py  initialize_data.py  main.py  run.py  utils.py
app/auth/: router.py
app/clients/: router.py
app/clients/service/: client_service.py  logic.py  model.py  model_path.py  router.py
tests/: conftest.py
