[project]
name = "common-assessment-tool-backend"
version = "0.1.0"
description = """
This will contain the model used for the project that based on the input information will give the social workers the clients baseline level of success and what their success will be after certain interventions.
The model works off of dummy data of several combinations of clients alongside the interventions chosen for them as well as their success rate at finding a job afterward. The model will be updated by the case workers by inputing new data for clients with their updated outcome information, and it can be updated on a daily, weekly, or monthly basis.
"""
dependencies = [
    "uvicorn"
]

[project.scripts]
start = "app.run:start"
load_data = "app.initialize_data:initialize_database"

[tool.black]
line-length = 88
extend-exclude = '''
/(
  # directories
  | \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["my_env*"]
